tests/ui/invalid_pyclass_enum.stderr
error: enums can't be inherited by other classes
 --> tests/ui/invalid_pyclass_enum.rs:3:11
  |
3 | #[pyclass(subclass)]
  |           ^^^^^^^^

error: enums can't extend from other classes
 --> tests/ui/invalid_pyclass_enum.rs:9:11
  |
9 | #[pyclass(extends = PyList)]
  |           ^^^^^^^

error: #[pyclass] can't be used on enums without any variants
  --> tests/ui/invalid_pyclass_enum.rs:16:18
   |
16 | enum NoEmptyEnum {}
   |                  ^^

error: Unit variant `UnitVariant` is not yet supported in a complex enum
       = help: change to a struct variant with no fields: `UnitVariant { }`
       = note: the enum is complex because of non-unit variant `StructVariant`
  --> tests/ui/invalid_pyclass_enum.rs:21:5
   |
21 |     UnitVariant,
   |     ^^^^^^^^^^^

error: Tuple variant `TupleVariant` is not yet supported in a complex enum
       = help: change to a struct variant with named fields: `TupleVariant { /* fields */ }`
       = note: the enum is complex because of non-unit variant `StructVariant`
  --> tests/ui/invalid_pyclass_enum.rs:27:5
   |
27 |     TupleVariant(i32),
   |     ^^^^^^^^^^^^

error: `signature` can't be used on a simple enum variant
  --> tests/ui/invalid_pyclass_enum.rs:32:12
   |
32 |     #[pyo3(signature = (a, b))]
   |            ^^^^^^^^^
